packages/hero/src/scss/_hero-basic.scss
@use "@uqds/core/src/scss/global" as core;
@use "@uqds/grid/src/scss/global" as grid;

.uq-hero-basic {
  background: core.$purple-600;
  margin-bottom: var(--hero-gap);
  position: relative;
}

.uq-hero-basic__image {
  position: absolute;
  opacity: 0.2;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 1;

  & img,
  & picture {
    object-fit: cover;
    height: 100%;
    width: 100%;
    display: block;
  }
}

.uq-hero-basic__content {
  position: relative;
  z-index: 2;
  color: core.$white;
  padding: var(--hero-basic-spacing) 0;

  & a {
    color: core.$white;
  }
}

.uq-hero-basic__eyebrow {
  font-weight: core.$font-weight-medium;
  font-size: core.$font-size-m;
  line-height: core.$line-height;
  font-family: core.$font-body;
  text-transform: uppercase;
  display: block;
}

.uq-hero-basic__title {
  font-size: var(--hero-font-size-xxxxl);
  color: core.$white;
  margin: 0;
  max-width: var(--hero-title-max-line-length);
}

.uq-hero-basic__back {
  margin-top: core.$space-s;

  & .uq-icon::before {
    // Lock icon width to 16px.
    width: 16px;
    // Allow height to match <a> element.
    height: 19px;
  }
}

.uq-hero-basic__tabs {
  position: relative;
  z-index: 2;
  padding-top: core.$space-m;
}

.uq-hero-basic--no-margin {
  margin-bottom: 0;
}

